# qwen3-tts-hip

./: .gitignore  Cargo.toml  OPTIMIZATION_LOG.md  README.md
docs/: tools.md
python-reference/: pyproject.toml  qwen3_tts_reference.py
scripts/: qwen3-hip-generate-fixtures.sh  qwen3-hip-parity.sh  qwen3-hip-voice-clone-parity.sh  qwen3-python-rtf-bench.py
src/: blas.rs  buffer.rs  code_predictor.rs  codec_hip.rs  error.rs  generation.rs  graph.rs  kernels.rs  lib.rs  talker.rs  text.rs
src/audio/: codec.rs  codec_hip.rs  mod.rs
src/gpu/: blas.rs  ffi.rs  kernel.rs  kernels.rs  mod.rs  profile.rs  runtime.rs
src/model/: code_predictor.rs  config.rs  decode.rs  mod.rs  sampling.rs  stack.rs  talker.rs  text.rs  voice_clone.rs  weights.rs
