[package]
name = "qwen3-hip-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
burn = { workspace = true, features = ["flex"] }
hound.workspace = true
libloading.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
