[package]
name = "qwen3-hip-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
hound = "3.5.1"
libloading = "0.8.9"
safetensors = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.17"
tokenizers = "0.22.1"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.timing]
inherits = "release"
lto = false
codegen-units = 256
incremental = true
opt-level = 2
debug = "line-tables-only"
