[project]
name = "qwen3-tts-hip-python-reference"
version = "0.1.0"
description = "Python reference artifact exporters for qwen3-tts-hip parity checks"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate==1.12.0",
    "einops",
    "huggingface-hub",
    "librosa>=0.11",
    "numba>=0.60",
    "numpy",
    "onnxruntime",
    "safetensors",
    "soundfile",
    "sox",
    "torch==2.12.1+rocm7.2",
    "torchaudio==2.11.0+rocm7.2",
    "transformers==4.57.3",
    "triton-rocm==3.7.1 ; sys_platform == 'linux'",
    "pyyaml",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[tool.uv.sources]
"torch" = { index = "pytorch-rocm" }
"torchaudio" = { index = "pytorch-rocm" }
"triton-rocm" = { index = "pytorch-rocm" }
